# exam_digitalizer

./: .gitignore
00. AI 놀이터/exam-digitalizer/backend/: Dockerfile  config.py  main.py  pyproject.toml
00. AI 놀이터/exam-digitalizer/backend/agents/: a01_parser.py  a02_parse_reviewer.py  a03_meta.py  a04_meta_reviewer.py  a05_producer.py  a06_prod_reviewer.py  a07_data.py  a08_data_reviewer.py  a09_exam_composer.py  a10_exam_reviewer.py  a11_service.py  a12_service_reviewer.py  a13_grader.py  a14_grade_reviewer.py  base_agent.py  dummy_agent.py  embedding_agent.py  orchestrator.py  worker.py
00. AI 놀이터/exam-digitalizer/backend/api/: admin.py  auth.py  batches.py  classrooms.py  exams.py  grades.py  join.py  learning_maps.py  notifications.py  questions.py  sessions.py  xapi.py
00. AI 놀이터/exam-digitalizer/backend/core/: db_session.py  deps.py  embedding.py  formula_converter.py  health.py  hwp_generator.py  hwp_parser.py  learning_map_matcher.py  llm_client.py  question_renderer.py  queue.py  review_scorer.py  scoring.py  security.py  storage.py
00. AI 놀이터/exam-digitalizer/backend/migrations/: env.py
00. AI 놀이터/exam-digitalizer/backend/models/: __init__.py  base.py  classroom.py  curriculum.py  exam.py  notification.py  pipeline.py  question.py  submission.py  user.py
00. AI 놀이터/exam-digitalizer/backend/schemas/: auth.py  common.py  exam.py  notification.py  pipeline.py  question.py
00. AI 놀이터/exam-digitalizer/backend/scripts/: import_curriculum.py  init_s3.py  learningmap.xlsx  rematch_learning_maps.py  retry_pipeline.py  seed.py
01. 구조 설계/: 에이전트 구조.pptx
(+103 files in other folders)
